home page added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <body>
     <div>
         <h2> navbar</h2>
+        <h2>This is Razu</h2>
+        <h2>I am working with home page</h2>
+
     </div>
+
+
 </body>
 
 </html>
