just write my name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
     <div>
-        <h2> navbar</h2>
+        <h2>Navbar</h2>
+    </div>
+    <div>
+        <h1>Hello, Everyone I am abdur rahaman</h1>
     </div>
 </body>
 
